<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Маленький гений</string>

    <!--start setup wizard-->

    <string name="title_setup_wizard_start">Приветствие</string>
    <string name="text_setup_wizard_start">Приветствие</string>
    <string name="label_setup_wizard_start">Начать настройку</string>
    <string name="label_setup_wizard_continue">Продолжить настройку</string>

    <string name="title_setup_unlock_secret">Установите пароль</string>
    <string name="text_setup_unlock_secret">Установите пароль</string>

    <string name="title_device_admin_request">Запросить права администратора</string>
    <string name="text_device_admin_request">Запросить права администратора</string>
    <string name="text_device_admin_request_explanation">Запросить права администратора</string>
    <string name="description_device_admin_component">Администратор "Маленький гений"</string>
    <string name="label_device_admin_component">Администратор "Маленький гений"</string>

    <string name="title_overlay_permission_request">Запросить разрешение на добавление поверх всех окон</string>
    <string name="text_overlay_permission_request">Запросить разрешение на добавление поверх всех окон</string>
    <string name="label_overlay_permission_request">Запросить</string>

    <string name="title_call_phone_permission_request">Запрос на доступ к контактам и возможность совершать телефонные вызовы</string>
    <string name="text_call_phone_permission_request">Запрос на доступ к контактам и возможность совершать телефонные вызовы</string>

    <string name="title_pupil_name_and_sex">Выберите имя и пол ученика</string>
    <string name="text_pupil_name_and_sex">Выберите имя и пол ученика</string>
    <string name="error_pupil_name_should_be_entered">Имя должно быть введено</string>

    <string name="title_pupil_avatar">Создайте аватар</string>

    <string name="title_qtp_complexity">Выберите сложность</string>
    <string name="text_qtp_complexity">Выберите сложность</string>

    <string name="title_setup_wizard_settings">Настройки</string>

    <!--admob-->

    <string name="admob_app_id">ca-app-pub-9028944105026522~9170175648</string>
    <string name="admob_ad_id">ca-app-pub-9028944105026522/9703114993</string>


    <string name="label_pause">Пауза</string>


    <string name="explicit_start">Включить</string>
    <string name="label_answer">Ответить</string>
    <string name="stop">Остановить</string>
    <string name="register">Зарегистрировать нового ученика</string>
    <string name="silence_start">Тихий старт</string>
    <string name="plus">+</string>
    <string name="question">\?</string>
    <string name="exit">Выход</string>
    <string name="close">Закрыть</string>
    <string name="label_phone">Телефон</string>
    <string name="missed_character">…</string>
    <string name="join_character">" "</string>
    <string name="meter_short">м</string>
    <string name="decimeter_short">дц</string>
    <string name="centimeter_short">см</string>
    <string name="square_figure_name">квадрат</string>
    <string name="rectangle_figure_name">прямоугольник</string>
    <string name="unknown_side">A</string>
    <string name="title_registration">Регистрация</string>
    <string name="label_registration">Регистрация</string>
    <string name="label_pupil_set_name">Выберите имя ученика</string>


    <string name="title_setup_pupil_sex">Выберите пол ученика</string>
    <string name="pupil_name_title">Имя ученика</string>
    <string name="pupil_sex_title">Пол</string>
    <string name="hint_pupil_name">Имя</string>
    <string name="hint_quest_series_length">Количество заданий за раз</string>
    <string name="pupil_secret_title">Секрет</string>
    <string name="complexity_title">Сложность</string>
    <string name="pupil_statistics">Статистика</string>
    <string name="phoneContacts">Разрешенные контакты</string>
    <string name="cancel">Отмена</string>
    <string name="hint_unlock_password">Пароль</string>

    <string name="title_enter_unlock_secret">Введите пароль</string>
    <string name="title_unlock_secret">Разблокировка</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_show_no_more">Больше не показывать</string>

    <string name="label_ask_for_call_phone_permission">Запросить</string>

    <string name="title_setup_wizard_complete">Настройка закончена</string>
    <string name="label_play_now">Играть</string>
    <string name="label_setup_password">Установить пароль</string>
    <string name="label_unlock">Разблокировать</string>

    <string name="title_allow_contacts">Разрешеннные контакты для исходящих звонков</string>
    <string name="title_subscriptions">Подписки</string>
    <string name="title_phone">Телефон</string>
    <string name="label_pick_contact">Добавить контакт</string>
    <string name="label_save_contacts">Сохранить контакты</string>
    <string name="label_allow_contacts">Контакты</string>
    <string name="label_stop_lock">Остановить</string>
    <string name="title_wrong_answer">Попробуй еще раз</string>
    <string name="title_right_answer_simple">Правильно</string>
    <string name="text_quest_support_chars_en">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="text_quest_support_chars_ru">абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</string>
    <string name="text_quest_support_chars_number">1234567890</string>
    <string name="label_set_unlock_secret">Установить секрет</string>
    <string name="label_reset_unlock_secret">Сбросить</string>
    <string name="right_answer_best_time_update_formatter">Ты улучшил время!\nПредыдущий рекорд: %1$s</string>
    <string name="right_answer_series_length_update_formatter">Улучшили череду правильных ответов: %1$d</string>
    <string name="right_answer_time_formatter">Время ответа: %1$s</string>
    <string name="wrong_answer">Неправильный ответ!!!</string>
    <string name="pupil_statistics_level_and_score_formatter">Уровень: %1$s (%2$s).\nОчки: %3$d из %4$d.\n\n</string>
    <string name="pupil_statistics_count_played_games_formatter">Количество попыток: %1$d.\n\n</string>
    <string name="pupil_statistics_item_formatter">Название задания: %1$s (%2$s).\nКоличество правильных/неправильных ответов: %3$d/%4$d\nЛучшее/худшее время ответа: %5$s/%6$s\n\n</string>
    <string name="qvri_pineapple_title">Ананас</string>
    <string name="qvri_blackberry_title">Ежевика</string>
    <string name="quest_name_formatter">%1$s (%2$s)</string>
    <string name="label_bind_parent_control">Привязать родителя</string>
    <string name="title_bind_parent_control">Привязать родителя</string>
    <string name="label_cancel">Отмена</string>
    <string name="text_generate_qr_code">Генерация…</string>
    <string name="label_set_random_avatar">Случайный аватар</string>
    <string name="book_title_name">Дневник\nуспеха</string>
    <string name="notification_let_play">Давай играй</string>
    <string name="notification_let_try_to_play">Давай попробуй поиграть</string>
    <string name="silence_mode">Тихий режим</string>
    <string name="notification_setup_wizard">Настройка приложения</string>
    <string name="title_notification_setup_wizard">Мастер настройки</string>
    <string name="title_delayed_start">Нажмите для начала решения задачи</string>
    <string name="title_or">или</string>
    <string name="title_use_unlock_key">Воспользуйтесь ключиком для пропуска задачи</string>
    <string name="color_default">По умолчанию</string>
    <string name="right_answer_timer_formatter">mm:ss.SSS</string>
    <string name="maximum">максимальное</string>
    <string name="minimum">минимальное</string>
    <string name="clock_formatter">HH:mm</string>
    <string name="quest_timer_formatter">mm:ss</string>
    <string name="title_advert">Реклама</string>
    <string name="title_advert_loading">Загрузка рекламы</string>
    <string name="title_new_level">Новый уровень</string>
    <string name="title_introduction">Приветствие</string>
    <string name="label_device_admin">Запросить права администратора</string>
    <string name="label_play_one_more_time">Еще раз</string>

    <string name="label_voice_record">Запись голоса</string>
    <string name="label_start_quest">Приступить</string>
    <string name="title_pupil_statistics">Статистика ученика</string>
    <string name="title_setup_voice_message">Запись голосового сообщения</string>
    <string name="title_setup_voice_message_for_right_answer">Для правильного ответа</string>
    <string name="title_setup_voice_message_for_wrong_answer">Для неправильного ответа</string>
    <string name="label_back">Назад</string>
    <string name="quest_series">%1$d из %2$d</string>
    <string name="title_statistics">Статистика</string>
    <string name="title_rewards">Достижения</string>
    <string name="title_unlock_key_help_on_consume">Ключ</string>
    <string name="title_unlock_key_help_on_zero_count">Нет ключей</string>
    <string name="title_gifts">Подарки</string>


    <string name="title_loading">Загрузка</string>
    <string name="ads_timeout_title">%1$s секунд осталось до пропуска</string>
    <string name="label_consume">Использовать</string>
    <string name="wait_for_start_title">Выберите</string>
    <string name="label_subscribes">Подписки</string>
    <string name="label_make_subscription">Оформить подписку</string>
    <string name="title_subscription_activated">Подписка активирована</string>

</resources>