<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SetupWizard.ContentContainer"
    tools:context="ru.nekit.android.qls.setupWizard.view.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_buttons"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_quest_series_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_quest_series_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quest_series_length"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_quest_series_length_save"
            style="@style/Button.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/container_quest_series_length"
            android:text="@string/label_ok" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_subscribes"
            style="@style/Button.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_subscribes" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_voice_record"
            style="@style/Button.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_voice_record" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_phone_contacts"
            style="@style/Button.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_allow_contacts" />

    </LinearLayout>

</RelativeLayout>